[modify] lang=jaに変更・リンク欄を追加

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset="UTF-8">
 	<title>自己紹介ページ</title>
 </head>
 <body>
 	<h1>This is index.html</h1>
-	<p>hoge1</p>
-	<p>hoge2</p>
-	<p>hoge3</p>
-	<p>hoge4</p>
-	<p>hoge5</p>
+	<p>自己紹介をします。</p>
+	<!-- ここに各自の自己紹介ページへのリンクを追加 -->
+	<a href="">名前1</a>
+	<a href="">名前2</a>
+	<a href="">名前3</a>
+	<a href="">名前4</a>
 </body>
 </html>
