自己紹介変更

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<p>自己紹介をします。</p>
 	<!-- ここに各自の自己紹介ページへのリンクを追加 -->
 	<a href="">名前1</a>
-	<a href="">名前2</a>
+	<a href="syotaro.html">佐藤翔太郎</a>
 	<a href="">名前3</a>
 	<a href="">名前4</a>
 </body>
