[add] Add take.html and modyfy index.html
take.htmlを新規作成 index.htmlの名前1欄にtake.htmlのリンクを追加

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>This is index.html</h1>
 	<p>自己紹介をします。</p>
 	<!-- ここに各自の自己紹介ページへのリンクを追加 -->
-	<a href="">名前1</a>
+	<a href="take.html">Take Hayatoの自己紹介ページへ</a>
 	<a href="">名前2</a>
 	<a href="">名前3</a>
 	<a href="">名前4</a>
