--- a/oikawa.html
+++ b/oikawa.html
@@ -5,12 +5,9 @@
 	<title>自己紹介ページ</title>
 </head>
 <body>
-	<h1>This is index.html</h1>
+	<h1>This is oikawa.html</h1>
 	<p>自己紹介をします。</p>
 	<!-- ここに各自の自己紹介ページへのリンクを追加 -->
-	<a href="">名前1</a>
-	<a href="syotaro.html">佐藤翔太郎</a>
-	<a href="">名前3</a>
-	<a href="oikawa.html">及川翔晴</a>
+	<p>盛岡情報ビジネス専門学校の及川翔晴です。</p>
 </body>
 </html>
